<resources>
    <string name="app_name">HowPopular</string>

    <string name="loginHint">Your Username</string>
    <string name="loginButton">Log in</string>
    <string name="wrongLogin">That username is not valid!</string>

    <string name="views">views</string>
    <string name="moreViews">has more views than</string>
    <string name="higherButton">HIGHER</string>
    <string name="lowerButton">LOWER</string>
    <string name="correctAnswers">correct</string>

    <string name="rankingTitle">HowPopular Ranking</string>
    <string name="rankingEmpty">Not played yet</string>
    <string name="rankingSeparator">-</string>
    <string name="rankingPoints">points</string>

    <string name="quizWinner">Congratulations for winning!</string>
    <string name="quizLoser">You lost the game…</string>
    <string name="score">You just achieved</string>
    <string name="score2">points</string>

    <string name="mainMenuButton">Main Menu</string>
    <string name="rankingButton">Ranking</string>
</resources>