<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvCurre"
    android:background="@color/soft_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivCurrentQuizImage"
        android:layout_width="364dp"
        android:layout_height="328dp"
        android:src="@drawable/rounded_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswers"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
            android:id="@+id/ivPreviousQuizImage"
            android:layout_width="120dp"
            android:layout_height="112dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/rounded_image"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            tools:srcCompat="@tools:sample/avatars" android:layout_marginEnd="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/bHigher"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#88FF88"
        android:fontFamily="@font/ubuntu"
        android:text="@string/higherButton"
        android:textAlignment="center"
        android:textColor="#74748f"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/bLower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCurrentQuizImage"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bLower"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="608dp"
        android:backgroundTint="#FF8888"
        android:fontFamily="@font/ubuntu"
        android:text="@string/lowerButton"
        android:textAlignment="center"
        android:textColor="#74748f"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPreviousQuizName"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/app_name"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivPreviousQuizImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvPreviousQuizPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/views"
            app:layout_constraintTop_toBottomOf="@+id/tvPreviousQuizName"
            app:layout_constraintEnd_toStartOf="@+id/ivPreviousQuizImage" android:layout_marginEnd="20dp"
            android:layout_marginTop="3dp" android:textAlignment="textEnd"/>

    <TextView
            android:id="@+id/tvCurrentQuizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.45"
            android:textAlignment="center"/>
    <TextView
            android:id="@+id/tvCurrentQuizPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/moreViews"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentQuizName" android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvCorrectAnswers"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/correctAnswers"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivPreviousQuizImage"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="@+id/ivPreviousQuizImage"
        app:layout_constraintTop_toBottomOf="@+id/ivPreviousQuizImage" />
</androidx.constraintlayout.widget.ConstraintLayout>