<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/soft_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvWinLoseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/tvGameScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/bRanking"
            android:text="@string/rankingButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="#FFFFFF" app:cornerRadius="100dp"
            android:textColor="#74748f" android:fontFamily="@font/ubuntu" android:textStyle="bold"
            android:typeface="normal" android:textAlignment="center" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bMainMenu" android:layout_marginBottom="5dp"/>
    <Button
            android:id="@+id/bMainMenu"
            android:text="@string/mainMenuButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="#FFFFFF" app:cornerRadius="100dp"
            android:textColor="#74748f" android:fontFamily="@font/ubuntu" android:textStyle="bold"
            android:typeface="normal" android:textAlignment="center" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="660dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>